public/admin/assets/css/style.css
/* ... */
ul.sidebar-nav li a i {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 17px;
}

ul.sidebar-nav li .active {
    background: var(--color-primary);
    color: #fff;
}

.dashboard-content {
    min-height: 100vh;
    padding-bottom: 5rem;
    height: 100%;
}

.layout-content-wrapper {
    --main-content-margin: var(--sidebar-width);
    margin-left: var(--main-content-margin);
    padding: 1.25rem 1.7rem 2rem 1.65rem;
    transition: margin 0.2s;
}
.dashboard.close-sidebar .sidebar {
    transform: translateX(-100%);
}

.dashboard.close-sidebar .layout-content-wrapper {
    --main-content-margin: 0;
}

.dashboard-header .wrapper {
    display: flex;
    justify-content: space-between;
}

.global-heading-wrapper {
    display: flex;
    gap: 0.6rem;
    align-items: center;
}

.sidebar-toggle {
    width: 36px;
    aspect-ratio: 1/1;
    color: #000;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    transition: background 150ms;
    cursor: pointer;
    position: relative;
    left: -7px;
}

.sidebar-toggle i {
    font-size: 1.5rem;
    transition: all 150ms;
}

.sidebar-toggle:hover {
    background: var(--color-primary);
    color: #ffff;
}
.dashboard-header h2 {
    font-size: 1.65rem;
    text-transform: capitalize;
    font-weight: 600;
    color: #49424d;
    margin-bottom: 0;
}

.input-search {
    display: flex;
    align-items: center;
    background: #fff;
    padding: 0 10px;
    border-radius: 7px;
    gap: 7px;
    line-height: 0;
}

.input-search input {
    border: none;
    outline: none;
    text-transform: capitalize;
    color: #777;
    font-size: 13px;
    width: 100%;
}

.input-search .search-icon {
    border: none;
    background: none;
    outline: none;
    font-size: 21px;
    color: #777;
    height: 40px;
}

.custom-sec--form {
    padding-top: 0.25rem;
}

.custom-sec__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 0 1rem;
}

.custom-sec__header .heading {
    margin-bottom: 0;
}

.custom-filters {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 9px;
}

.custom-sec__header .button-dropdown {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2px;
    background: var(--color-primary-light);
    padding: 6px 6px;
    /* border-radius: 6px; */
    font-size: 0.85rem;
    border: none;
    outline: none;
    border-radius: 7px;
}

.custom-sec__header .button-dropdown .icon {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 19px;
    color: #777;
}

a.custom-card__img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.custom-card__img {
    width: 100%;
    height: 145px;
    overflow: hidden;
    position: relative;
}

.custom-card {
    background: #fff;
    position: relative;
    border-radius: 0.75rem;
    margin: 0.65rem 0;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

.custom-card .rating {
    position: absolute;
    top: 10px;
    right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
    width: 54px;
    background: rgba(255, 255, 255, 0.5);
    border-radius: 23px;
    gap: 5px;
}

.custom-card .rating i {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #decf4e;
    width: 12px;
    height: 12px;
}

.custom-card .rating .participant {
    font-size: 12px;
    color: #fff;
}

.custom-card__content {
    padding: 13px 15px;
}

.custom-card__content .title {
    font-size: 1.1rem;
    font-weight: 500;
}

.custom-card__content .duration {
    font-size: 0.75rem;
}

.card-bottom {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 1rem 0 0;
}

.custom-sec__header .button-dropdown .text {
    font-size: 0.85rem;
    font-weight: 500;
    color: #777;
}

.card-bottom .price {
    font-size: 1.1rem;
    font-weight: 600;
}

.card-bottom .themeBtn {
    font-size: 0.75rem;
    padding: 0.3rem 0.85rem;
}

.dashboard-rightSec {
    padding: 1.55rem 0.85rem 2rem;
}

.profile-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.user-image-icon img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.user-image-icon img {
    width: 40px;
    height: 40px;
    border-radius: 100%;
}

.user-image-icon i {
    font-size: 2.85rem;
    color: var(--color-primary);
}

.user-profile {
    display: flex;
    align-items: center;
    gap: 10px;
}

.user-profile .name {
    text-align: end;
    line-height: 1.35;
}
.user-image-icon {
    cursor: pointer;
}

.user-profile .name1 {
    font-size: 11px;
    font-weight: 600;
    color: #49424d;
}

.user-profile .role {
    color: var(--color-primary);
    font-size: 0.85rem;
    text-transform: capitalize;
    font-weight: 700;
}

.notifi-icon {
    background: #fff;
    padding: 0 10px;
    border-radius: 7px;
    position: relative;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    cursor: pointer;
}

.notification-count {
    width: 17px;
    aspect-ratio: 1/1;
    background: red;
    color: #fff;
    font-size: 0.75rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    position: absolute;
    top: -0.25rem;
    right: -0.5rem;
    z-index: 1;
}

.notifi-icon i {
    font-size: 20px;
    color: #49424d;
}

.recent-act {
    margin: 1.45rem 0 1rem;
    background: #fff;
    padding: 1.15rem;
    width: 100%;
    border-radius: 12px;
}

.recent-act__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 0.95rem;
}

.recent-act__header .title {
    font-size: 16px;
    font-weight: 600;
    color: #49424d;
}
/* ... */

